--- a/sping-01-ioc1/build.gradle
+++ b/sping-01-ioc1/build.gradle
@@ -4,6 +4,7 @@ plugins {
 
 dependencies {
     implementation 'org.springframework:spring-webmvc'
+    apiElements 'org.springframework:spring-jdbc'
 //    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
 //    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
 }
